@@ -2,6 +2,7 @@ plugins {
     alias(libs.plugins.composeCompiler)
     alias(libs.plugins.kotlinMultiplatform)
     alias(libs.plugins.jetbrainsCompose)
+    alias(libs.plugins.kotlinSerialization)
 }
 
 compose.resources {
@@ -14,18 +15,23 @@ kotlin {
 
     jvm("desktop")
 
+    jvmToolchain {
+        languageVersion.set(JavaLanguageVersion.of(17))
+    }
+
     sourceSets {
         val desktopMain by getting
 
         commonMain.dependencies {
             implementation(project(":korender"))
-            implementation(compose.runtime)
-            implementation(compose.foundation)
-            implementation(compose.material)
-            implementation(compose.ui)
-            implementation(compose.components.resources)
+            implementation(libs.compose.runtime)
+            implementation(libs.compose.foundation)
+            implementation(libs.compose.material3)
+            implementation(libs.compose.ui)
+            implementation(libs.compose.components.resources)
             implementation(libs.commons.math3)
-            implementation("com.github.haifengl:smile-core:4.4.0")
+            implementation(libs.kotlinxcollections.immutable)
+            implementation(libs.kotlinx.serialization.cbor)
         }
         desktopMain.dependencies {
             implementation(compose.desktop.currentOs)
@@ -35,9 +41,22 @@ kotlin {
 
 compose.desktop {
     application {
+        jvmArgs += listOf(
+            "--add-opens=java.base/java.lang=ALL-UNNAMED",
+            "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED",
+        )
         mainClass = "com.zakgof.korender.baker.MainKt"
-        jvmArgs("--add-exports", "java.desktop/sun.awt=ALL-UNNAMED", "-DprojectRoot=${project.projectDir.absolutePath}")
-        nativeApplication {
+        nativeDistributions {
+            jvmArgs += listOf(
+                "--add-opens=java.base/java.lang=ALL-UNNAMED",
+                "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED",
+            )
+            windows {
+                includeAllModules = true
+            }
+        }
+        buildTypes.release.proguard {
+            isEnabled = false
         }
     }
 }
